# microSBE

./: .bazelrc  .gitignore  MODULE.bazel  README.md
scratch/c99_kernel/: IR.c  tree_walking_decoder.c
scratch/hello_bazel/: BUILD  hello_bazel.c
scratch/notes/: prior_art.md  wip.md
scratch/sbe_compiled/: BUILD  Cargo.toml  static_rust_encoder.rs  static_rust_example.rs
